--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,9 +10,8 @@
  *
  *= require_self
  *= require bootstrap_and_overrides
- *= require admin/admin
  *= require character_entry
  *= require tournament_table
  *= require date
- *= require jquery.ui.autocomplete
+ *= require autocomplete_box
 */
