--- a/app/views/tournaments/show.html.erb
+++ b/app/views/tournaments/show.html.erb
@@ -1,30 +1,1 @@
-<% unless @final_stage_matches.empty? %>
-    <% cache(final_stages_cache_key(@tournament)) do %>
-        <%= render partial: 'shared/final_match', locals: {stage_matches: @final_stage_matches} %>
-    <% end %>
-
-    <hr />
-<% end %>
-
-<% @group_stage_matches.each_slice(2) do |left, right| %>
-    <% left_group = left.shift %>
-    <% cache(group_stages_cache_key(@tournament, left_group)) do %>
-        <% left.each do |stage_matches| %>
-            <%= render partial: 'shared/table_match', locals: {group: left_group,
-                                                               stage_matches: stage_matches,
-                                                               columns: @tournament.group_stages_without_playoffs.size} %>
-        <% end %>
-    <% end %>
-    <% if right %>
-        <% right_group = right.shift %>
-        <% cache(group_stages_cache_key(@tournament, right_group)) do %>
-            <% right.each do |stage_matches| %>
-                <%= render partial: 'shared/table_match', locals: {group: right_group,
-                                                                   stage_matches: stage_matches,
-                                                                   right_align: true,
-                                                                   columns: @tournament.group_stages_without_playoffs.size} %>
-            <% end %>
-        <% end %>
-    <% end %>
-    <div class="cb"></div>
-<% end %>
+<%= @tournament_view_model.render %>
