--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,10 @@
  *= require_self
  *= require bootstrap_and_overrides
  *= require character_entry
+ *= require final_matches_view_model
+ *= require group_matches_view_model
+ *= require group_view_model
+ *= require match_view_model
  *= require tournament_table
  *= require date
  *= require autocomplete_box
