--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -31,6 +31,8 @@
 // Example:
 // @linkColor: #ff0000;
 
+@import "variables_and_functions";
+
 @baseFontSize: 13px;
 
 // Make anchor links look like ordinary text.
