Use twitter-bootstrap-rails' navbar helpers

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -49,7 +49,7 @@ div.cb {
     clear: both;
 }
 
-.navbar .nav > li.top-subtitle {
+a.top-subtitle {
     font-weight: bold;
     a {
         color: #000000;
