--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,40 +20,29 @@
   </head>
 
   <body>
-    <div class="navbar navbar-inverse" style="margin-bottom: 0;">
-      <div class="navbar-inner">
-          <div class="container-fluid">
-          <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="#"><%= image_tag 'saimoe-logo.png' %></a>
-          <div class="container-fluid nav-collapse">
-            <ul class="nav">
-              <li><%= link_to 'Home', '/' %></li>
-              <li class="dropdown">
-                <%= link_to('#', class: 'dropdown-toggle', data: {toggle: 'dropdown'}) do %>
-                    Tournaments <b class="caret"></b>
-                <% end %>
-                <ul class="dropdown-menu">
-                  <% Tournament.ordered.reverse_order.each do |t| %>
-                      <%= link_to t.year, short_tournament_path(t.year) %>
-                  <% end %>
-                </ul>
-              </li>
-              <li><%= link_to 'Characters', characters_path %></li>
-              <li><%= link_to 'Series', series_index_path %></li>
-              <li><%= link_to 'Voice Actors', voice_actors_path %></li>
-              <li class="divider-vertical"></li>
-              <form class="navbar-search">
-                <%= AutocompleteBox.new(autocomplete_path, 'Search').render %>
-              </form>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
-      </div>
-    </div>
+    <%= nav_bar static: :top, responsive: true, inverse: true, brand: image_tag('saimoe-logo.png'), brand_link: '#' do %>
+
+      <%= menu_group do %>
+        <%= menu_item 'Home', root_path %>
+
+        <%= drop_down 'Tournaments' do %>
+          <% Tournament.ordered.reverse_order.each do |t| %>
+            <%= menu_item t.year, short_tournament_path(t.year) %>
+          <% end %>
+        <% end %>
+
+        <%= menu_item 'Characters', characters_path %>
+        <%= menu_item 'Series', series_index_path %>
+        <%= menu_item 'Voice Actors', voice_actors_path %>
+      <% end %>
+
+      <%= menu_group pull: :right do %>
+        <form class="navbar-form">
+          <%= AutocompleteBox.new(autocomplete_path, 'Search').render %>
+        </form>
+      <% end %>
+
+    <% end %>
 
     <% if content_for? :tournament_nav %>
       <%= yield :tournament_nav %>
