--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -49,9 +49,8 @@ div.cb {
     clear: both;
 }
 
-a.top-subtitle {
+p.top-subtitle {
     font-weight: bold;
-    a {
-        color: #000000;
-    }
+    padding-left: 15px;
+    padding-right: 15px;
 }
