Implement new popover for playoff matches; other small changes

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -49,8 +49,22 @@ div.cb {
     clear: both;
 }
 
+div[rel="html_popover_content"] {
+    display: none;
+}
+
+// Nav bar changes
+
 p.top-subtitle {
     font-weight: bold;
     padding-left: 15px;
     padding-right: 15px;
+}
+
+@media (max-width: @navbarCollapseWidth) {
+    form.navbar-form {
+        .search-query {
+            width: 95%;
+        }
+    }
 }
