--- a/app/assets/stylesheets/match_view_model.css.less
+++ b/app/assets/stylesheets/match_view_model.css.less
@@ -3,6 +3,12 @@
 
 @import "variables_and_functions";
 
+.popover-content {
+    .match-view-model {
+        margin-bottom: 9px;
+    }
+}
+
 .match-view-model {
     display: block;
 
