--- a/app/views/characters/show.html.erb
+++ b/app/views/characters/show.html.erb
@@ -21,16 +21,7 @@
   <h2>Tournament History</h2>
 </div>
 
-<dl class="dl-horizontal">
-  <% @character.tournament_history.each do |t, th| %>
-    <dt>
-      <h3><%= t.year %></h3>
-    </dt>
-    <dd>
-      <%= format_character_tournament_buttons t, th %>
-    </dd>
-  <% end %>
-</dl>
+<%= @tournament_history_view_model.render %>
 
 <div class="form-actions">
   <%= link_to 'Character index', characters_path, class: 'btn' %>
