--- a/app/views/voice_actors/show.html.erb
+++ b/app/views/voice_actors/show.html.erb
@@ -24,16 +24,7 @@
   <h2>Tournament History</h2>
 </div>
 
-<dl class="dl-horizontal">
-  <% @voice_actor.tournament_history.each do |t, th| %>
-    <dt>
-      <h3><%= t.year %></h3>
-    </dt>
-    <dd>
-      <%= format_history_tournament_buttons t, th %>
-    </dd>
-  <% end %>
-</dl>
+<%= @tournament_history_view_model.render %>
 
 <div class="form-actions">
   <%= link_to 'Voice actor index', voice_actors_path, class: :btn  %>
