--- a/app/views/characters/index.html.erb
+++ b/app/views/characters/index.html.erb
@@ -18,7 +18,7 @@
           <h4><%= link_to(series.name, series_path(series)) %></h4>
           <div class="well">
             <% c_data.each do |character| %>
-              <%= CharacterEntry.new(character).with(show_series: false, fixed_width: false).render %>
+              <%= CharacterEntry.new(character, show_series: false, fixed_width: false).render %>
             <% end %>
           </div>
         <% end %>
