--- a/app/views/series/show.html.erb
+++ b/app/views/series/show.html.erb
@@ -41,6 +41,16 @@
 <% end %>
 
 <div class="page-header"<%= " style=\"border-bottom: 1px solid ##{@series.color_code}\"".html_safe if @series.color_code %>>
+  <h2>Statistics</h2>
+</div>
+
+<div class="row-fluid">
+  <div class="span6">
+    <%= @total_votes_view_model.render %>
+  </div>
+</div>
+
+<div class="page-header"<%= " style=\"border-bottom: 1px solid ##{@series.color_code}\"".html_safe if @series.color_code %>>
   <h2>Tournament History</h2>
 </div>
 
