--- a/app/views/voice_actors/show.html.erb
+++ b/app/views/voice_actors/show.html.erb
@@ -21,6 +21,16 @@
 </div>
 
 <div class="page-header">
+  <h2>Statistics</h2>
+</div>
+
+<div class="row-fluid">
+  <div class="span6">
+    <%= @total_votes_view_model.render %>
+  </div>
+</div>
+
+<div class="page-header">
   <h2>Tournament History</h2>
 </div>
 
