Added 2002 playoff groups to bracket, generalised stats list template

--- a/app/assets/stylesheets/view_models/statistics_list_view_model.css.less
+++ b/app/assets/stylesheets/view_models/statistics_list_view_model.css.less
@@ -3,8 +3,8 @@
 
 @import "variables_and_functions";
 
-.total-votes-view-model {
-    td.current {
+.statistics-list-view-model {
+    td.emphasize {
         font-weight: bold;
     }
     td.indicator {
