--- a/app/views/series/show.html.erb
+++ b/app/views/series/show.html.erb
@@ -46,7 +46,7 @@
 
 <div class="row-fluid">
   <div class="span6">
-    <%= @total_votes_view_model.render %>
+    <%= @statistics_list_view_model.render %>
   </div>
 </div>
 
