--- a/app/views/voice_actors/show.html.erb
+++ b/app/views/voice_actors/show.html.erb
@@ -26,7 +26,7 @@
 
 <div class="row-fluid">
   <div class="span6">
-    <%= @total_votes_view_model.render %>
+    <%= @statistics_list_view_model.render %>
   </div>
 </div>
 
