--- a/app/views/characters/show.html.erb
+++ b/app/views/characters/show.html.erb
@@ -22,7 +22,7 @@
 
 <div class="row-fluid">
   <div class="span6">
-    <%= @statistics_list_view_model.render %>
+    <%= render partial: @statistics_list_view_model, as: :vm %>
   </div>
 </div>
 
@@ -30,7 +30,7 @@
   <h2>Tournament History</h2>
 </div>
 
-<%= @tournament_history_view_model.render %>
+<%= render partial: @tournament_history_view_model, as: :vm %>
 
 <div class="form-actions">
   <%= link_to 'Character index', characters_path, class: 'btn' %>
