--- a/app/views/tournaments/characters_by_average_votes.html.erb
+++ b/app/views/tournaments/characters_by_average_votes.html.erb
@@ -2,4 +2,4 @@
   <h1>Characters <small>Sorted by average votes gained over their matches in Saimoe <%= @tournament.year %></small></h1>
 </div>
 
-<%= @view_model.render %>
+<%= render partial: @view_model, as: :vm %>
