--- a/app/views/tournaments/rounds_by_voice_actor_prevalence.html.erb
+++ b/app/views/tournaments/rounds_by_voice_actor_prevalence.html.erb
@@ -2,4 +2,4 @@
   <h1>Voice actors <small>Sorted by number of appearances at each stage of Saimoe <%= @tournament.year %></small></h1>
 </div>
 
-<%= @view_model.render %>
+<%= render partial: @view_model, as: :vm %>
